--- a/configuration.properties
+++ b/configuration.properties
@@ -4,4 +4,4 @@ browser = chrome
 #Automation Exercise daki test caselerine ait calismalar bu veriler uzerinden yapilacaktir
 
 aeUrl=https://www.automationexercise.com
-
+aeReklamUrl=https://www.automationexercise.com/account_created#google_vignette
